[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pipenv = "^2020.6.2"
nltk = "^3.5"
counter = "^1.0.0"
corpus = "^0.4.2"
numpy = "^1.19.1"
en = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
